Item 7574 : Fix dev certificates for docker cots deployment

--- a/vitam-conf-dev/conf/ihm-demo/shiro.ini
+++ b/vitam-conf-dev/conf/ihm-demo/shiro.ini
@@ -23,7 +23,6 @@ securityManager.sessionManager.sessionIdCookie.secure = true
 securityManager.rememberMeManager.cookie.secure = true
 securityManager.rememberMeManager.cookie.httpOnly = true
 
-
 # Notice how we didn't define the class for the FormAuthenticationFilter ('authc') - it is instantiated and available already:
 authc.loginUrl = /#!/login
 
@@ -57,7 +56,7 @@ securityManager.realms = $iniRealm
 
 [roles]
 admin = *
-user = messages:*, archivesearch:*, logbook:*, ingest:*, archiveupdate:*, archiveunit:*, ingests:read, admin:formats:read, admin:rules:read, admin:accession-register:read, logbookunitlifecycles:*, logbookobjectslifecycles:*, clear:delete, check:read, traceability:content:read, accesscontracts:read, profiles:read, contracts:read, contexts:read, archiveunitprofiles:read, ontologies:read
+user = messages:*, archivesearch:*, logbook:*, ingest:*, archiveupdate:*, archiveunit:*, ingests:read, admin:formats:read, admin:rules:read, admin:accession-register:read, logbookunitlifecycles:*, logbookobjectslifecycles:*, clear:delete, check:read, traceability:content:read, accesscontracts:read, profiles:read, contracts:read, contexts:read, archiveunitprofiles:read, ontologies:read, accessionregisterssymbolic:read
 guest = archivesearch:*, archiveunit:*, units:*, unit:*, admin:accession-register:read, accesscontracts:read
 
 
