--- a/vitam-conf-dev/conf/ihm-recette/ihm-recette.conf
+++ b/vitam-conf-dev/conf/ihm-recette/ihm-recette.conf
@@ -8,7 +8,7 @@ staticContent: "/vitam/app/ihm-recette"
 jettyConfig: jetty-config.xml
 authentication: true
 secure: false
-secureMode: 
+secureMode:
 - authc
 sipDirectory: /vitam/data/ihm-recette/test-data
 performanceReportDirectory: /vitam/data/ihm-recette/report/performance
@@ -38,6 +38,14 @@ elasticsearchNodes:
   httpPort: 9200
 
 workspaceUrl: http://workspace.service.consul:8201/
+
+# ElasticSearch External Mapping
+elasticsearchExternalMetadataMappings:
+- collection: Unit
+  mappingFile: deployment/ansible-vitam/roles/elasticsearch-mapping/files/unit-es-mapping.json
+- collection: ObjectGroup
+  mappingFile: deployment/ansible-vitam/roles/elasticsearch-mapping/files/unit-es-mapping.json
+
 
 # Functional Admin Configuration
 functionalAdminAdmin:
