--- a/sources/integration-test/src/test/resources/common/storage-default-offer.conf
+++ b/sources/integration-test/src/test/resources/common/storage-default-offer.conf
@@ -6,8 +6,8 @@ mongoDbNodes:
     dbPort: 12346
 dbName: vitam-test
 offerLogCompaction:
-  expirationValue: 1
-  expirationUnit: MILLIS
+  expirationValue: 21
+  expirationUnit: DAYS
   compactionSize: 1000
 
 maxBatchThreadPoolSize: 32
