--- a/deployment/ansible-vitam/roles/vitam/tasks/main.yml
+++ b/deployment/ansible-vitam/roles/vitam/tasks/main.yml
@@ -300,7 +300,7 @@
     - reload consul configuration
 
 - include_tasks: remove_metrics.yml
-  when: vitam_struct.metrics_enabled |lower != "true"
+  when: metrics_enabled |lower != "true"
 
 - import_tasks: consul.yml
 
