--- a/deployment/environments/group_vars/all/offers_opts.yml.example
+++ b/deployment/environments/group_vars/all/offers_opts.yml.example
@@ -1,16 +1,27 @@
 # This is the default vitam strategy ('default'). It is mandatory and must define a referent offer.
-# This list of offers is ordered. It can and has to be completed if more offers are necessary
+# This list of offers is ordered. It has to be completed if more offers are necessary
 # Strategy order (1st has to be the preferred one)
 vitam_strategy:
   - name: offer-fs-1
     referent: true
-#    status: ACTIVE # status : enable (value=ACTIVE, default value) or disable (value=INACTIVE) this offer
-#    vitam_site_name: prod-dc2 # optional, should be related to vitam_site_name if local ; remote vitam_site_name if distant
-#  - name: offer-swift-1
-# Example distant:
+
+# Optional params for each offers in vitam_strategy. If not set, the default values are applied.
+#    referent: false              # true / false (default), only one per site must be referent
+#    status: ACTIVE               # ACTIVE (default) / INACTIVE
+#    vitam_site_name: distant-dc2 # default is the value of vitam_site_name defined in your local inventory file, should be specified with the vitam_site_name defined for the distant offer
+#    distant: false               # true / false (default). If set to true, it will not check if the provider for this offer is correctly set
+#    id: idoffre                  # OPTIONAL, but IF ACTIVATED, MUST BE UNIQUE & SAME if on another site
+#    asyncRead: false             # true / false (default). Should be set to true for tape offer only
+
+# Example for tape offer:
+# Tape offer mustn't be referent (referent: false) and should be configured as asynchrone read (asyncRead: true)
+#  - name: offer-tape-1
+#    referent: false
+#    asyncRead: true
+
+# Example distant offer:
 #  - name: distant
-#    referent: true
-#    status: INACTIVE
+#    referent: false
 #    vitam_site_name: distant-dc2
 #    distant: true # Only add this parameter when distant offer (not on same platform)
 
@@ -36,6 +47,101 @@ vitam_strategy:
 # ATTENTION !!! Each offer has to have a distinct name, except for clusters binding a same physical storage
 # WARNING : for offer names, please only use [a-z][a-z0-9-]* pattern
 vitam_offers:
+  offer-fs-1:
+    # param can be filesystem-hash (recomended) or filesystem (not recomended)
+    provider: filesystem-hash
+    # Offer log compaction
+    offer_log_compaction:
+      ## Expiration, here offer logs 21 days old will be compacted
+      expiration_value: 21
+      ## Choose one of "MILLENNIA", "HALF_DAYS", "MILLIS", "FOREVER", "MICROS", "CENTURIES", "DECADES", "YEARS", "DAYS", "SECONDS", "HOURS", "MONTHS", "WEEKS", "NANOS", "MINUTES", "ERAS"
+      expiration_unit: "DAYS"
+      ## Compaction bulk size here 10 000 offers logs (at most) will be compacted (Expected value between 1 000 and 200 000)
+      compaction_size: 10000
+    # Batch processing thread pool size
+    maxBatchThreadPoolSize: 32
+    # Batch metadata computation timeout in seconds
+    batchMetadataComputationTimeout: 600
+################################################################################
+  offer-swift-1:
+    # provider : openstack-swift for v1 or openstack-swift-v3 for v3
+    provider: openstack-swift-v3
+    # swiftKeystoneAuthUrl : URL de connexion à keystone
+    swiftKeystoneAuthUrl: https://openstack-hostname:port/auth/1.0
+    # swiftDomain : domaine OpenStack dans lequel l'utilisateur est enregistré
+    swiftDomain: domaine
+    # swiftUser : identifiant de l'utilisateur
+    swiftUser: utilisateur
+    # swiftPassword: has to be set in vault-vitam.yml (encrypted) with same structure => DO NOT COMMENT OUT
+    # swiftProjectName : nom du projet openstack
+    swiftProjectName: monTenant
+    ### Optional parameters
+    # swiftUrl: optional variable to force the swift URL
+    # swiftUrl: https://swift-hostname:port/swift/v1
+    #SSL TrustStore
+    swiftTrustStore: /chemin_vers_mon_fichier/monSwiftTrustStore.jks
+    #Max connection (concurrent connections), per route, to keep in pool (if a pooling ConnectionManager is used) (optional, 200 by default)
+    swiftMaxConnectionsPerRoute: 200
+    #Max total connection (concurrent connections) to keep in pool (if a pooling ConnectionManager is used) (optional, 1000 by default)
+    swiftMaxConnections: 1000
+    #Max time (in milliseconds) for waiting to establish connection (optional, 200000 by default)
+    swiftConnectionTimeout: 200000
+    #Max time (in milliseconds) waiting for a data from the server (socket) (optional, 60000 by default)
+    swiftReadTimeout: 60000
+    #Time (in seconds) to renew a token before expiration occurs (blocking) (optional, 60 by default)
+    swiftHardRenewTokenDelayBeforeExpireTime: 60
+    #Time (in seconds) to renew a token before expiration occurs (optional, 300 by default)
+    swiftSoftRenewTokenDelayBeforeExpireTime: 300
+    # Offer log compaction
+    offer_log_compaction:
+      ## Expiration, here offer logs 21 days old will be compacted
+      expiration_value: 21
+      ## Choose one of "MILLENNIA", "HALF_DAYS", "MILLIS", "FOREVER", "MICROS", "CENTURIES", "DECADES", "YEARS", "DAYS", "SECONDS", "HOURS", "MONTHS", "WEEKS", "NANOS", "MINUTES", "ERAS"
+      expiration_unit: "DAYS"
+      ## Compaction bulk size here 10 000 offers logs (at most) will be compacted (Expected value between 1 000 and 200 000)
+      compaction_size: 10000
+    # Batch processing thread pool size
+    maxBatchThreadPoolSize: 32
+    # Batch metadata computation timeout in seconds
+    batchMetadataComputationTimeout: 600
+################################################################################
+  offer-s3-1:
+    # provider : can only be amazon-s3-v1 for Amazon SDK S3 V1
+    provider: 'amazon-s3-v1'
+    # s3Endpoint : URL of connection to S3
+    s3Endpoint: https://s3.domain/
+    ### Optional parameters
+    # s3RegionName (optional): Region name (default value us-east-1)
+    s3RegionName: us-east-1
+    # s3SignerType (optional): Signing algorithm.
+    #     - signature V4 : 'AWSS3V4SignerType' (default value)
+    #     - signature V2 : 'S3SignerType'
+    s3SignerType: AWSS3V4SignerType
+    # s3PathStyleAccessEnabled (optional): 'true' to access bucket in "path-style", else "virtual-hosted-style" (true by default)
+    s3PathStyleAccessEnabled: true
+    # s3MaxConnections (optional): Max total connection (concurrent connections) (50 by default)
+    s3MaxConnections: 50
+    # s3ConnectionTimeout (optional): Max time (in milliseconds) for waiting to establish connection (10000 by default)
+    s3ConnectionTimeout: 10000
+    # s3SocketTimeout (optional): Max time (in milliseconds) for reading from a connected socket (50000 by default)
+    s3SocketTimeout: 50000
+    # s3RequestTimeout (optional): Max time (in milliseconds) for a request (0 by default, disabled)
+    s3RequestTimeout: 0
+    # s3ClientExecutionTimeout (optional): Max time (in milliseconds) for a request by java client (0 by default, disabled)
+    s3ClientExecutionTimeout: 0
+    # Offer log compaction
+    offer_log_compaction:
+      ## Expiration, here offer logs 21 days old will be compacted
+      expiration_value: 21
+      ## Choose one of "MILLENNIA", "HALF_DAYS", "MILLIS", "FOREVER", "MICROS", "CENTURIES", "DECADES", "YEARS", "DAYS", "SECONDS", "HOURS", "MONTHS", "WEEKS", "NANOS", "MINUTES", "ERAS"
+      expiration_unit: "DAYS"
+      ## Compaction bulk size here 10 000 offers logs (at most) will be compacted (Expected value between 1 000 and 200 000)
+      compaction_size: 10000
+    # Batch processing thread pool size
+    maxBatchThreadPoolSize: 32
+    # Batch metadata computation timeout in seconds
+    batchMetadataComputationTimeout: 600
+################################################################################
   offer-tape-1:
     provider: tape-library
     tapeLibraryConfiguration:
@@ -46,7 +152,6 @@ vitam_offers:
       forceOverrideNonEmptyCartridges: false
       # Archive (Tar) file expire time for retention in local FS
       archiveRetentionCacheTimeoutInMinutes: 30
-
       useSudo: false
     topology:
       buckets:
@@ -113,102 +218,17 @@ vitam_offers:
     maxBatchThreadPoolSize: 32
     # Batch metadata computation timeout in seconds
     batchMetadataComputationTimeout: 600
-  offer-fs-1:
-    # param can be filesystem-hash (recomended) or filesystem (not recomended)
-    provider: filesystem-hash
-    # Offer log compaction
-    offer_log_compaction:
-      ## Expiration, here offer logs 21 days old will be compacted
-      expiration_value: 21
-      ## Choose one of "MILLENNIA", "HALF_DAYS", "MILLIS", "FOREVER", "MICROS", "CENTURIES", "DECADES", "YEARS", "DAYS", "SECONDS", "HOURS", "MONTHS", "WEEKS", "NANOS", "MINUTES", "ERAS"
-      expiration_unit: "DAYS"
-      ## Compaction bulk size here 10 000 offers logs (at most) will be compacted (Expected value between 1 000 and 200 000)
-      compaction_size: 10000
-    # Batch processing thread pool size
-    maxBatchThreadPoolSize: 32
-    # Batch metadata computation timeout in seconds
-    batchMetadataComputationTimeout: 600
-  offer-swift-1:
-    # provider : openstack-swift for v1 or openstack-swift-v3 for v3
-    provider: openstack-swift-v3
-    # swiftKeystoneAuthUrl : URL de connexion à keystone
-    swiftKeystoneAuthUrl: https://openstack-hostname:port/auth/1.0
-    # swiftDomain : domaine OpenStack dans lequel l'utilisateur est enregistré
-    swiftDomain: domaine
-    # swiftUser : identifiant de l'utilisateur
-    swiftUser: utilisateur
-    # swiftPassword: has to be set in vault-vitam.yml (encrypted) with same structure => DO NOT COMMENT OUT
-    # swiftProjectName : nom du projet openstack
-    swiftProjectName: monTenant
-    # swiftUrl: optional variable to force the swift URL
-    # swiftUrl: https://swift-hostname:port/swift/v1
-    #SSL TrustStore
-    swiftTrustStore: /chemin_vers_mon_fichier/monSwiftTrustStore.jks
-    #Max connection (concurrent connections), per route, to keep in pool (if a pooling ConnectionManager is used) (by default 2 for Apache HttpClient)
-    swiftMaxConnectionsPerRoute: 200
-    #Max total connection (concurrent connections) to keep in pool (if a pooling ConnectionManager is used) (by default 20 for Apache HttpClient)
-    swiftMaxConnections: 1000
-    #Max time (in milliseconds) for waiting to establish connection
-    swiftConnectionTimeout: 200000
-    #Max time (in milliseconds) waiting for a data from the server (socket)
-    swiftReadTimeout: 60000
-    #Time (in seconds) to renew a token before expiration occurs (blocking)
-    swiftHardRenewTokenDelayBeforeExpireTime: 60
-    offer_log_compaction:
-      ## Expiration, here offer logs 21 days old will be compacted
-      expiration_value: 21
-      ## Choose one of "MILLENNIA", "HALF_DAYS", "MILLIS", "FOREVER", "MICROS", "CENTURIES", "DECADES", "YEARS", "DAYS", "SECONDS", "HOURS", "MONTHS", "WEEKS", "NANOS", "MINUTES", "ERAS"
-      expiration_unit: "DAYS"
-      ## Compaction bulk size here 10 000 offers logs (at most) will be compacted (Expected value between 1 000 and 200 000)
-      compaction_size: 10000
-    # Batch processing thread pool size
-    maxBatchThreadPoolSize: 32
-    # Batch metadata computation timeout in seconds
-    batchMetadataComputationTimeout: 600
-  offer-s3-1:
-    # provider : can only be amazon-s3-v1 for Amazon SDK S3 V1
-    provider: 'amazon-s3-v1'
-    # s3Endpoint :  : URL of connection to S3
-    s3Endpoint: https://s3.domain/
-    # s3RegionName (optional):  Region name (default value us-east-1)
-    s3RegionName: us-east-1
-    # s3SignerType (optional):  Signing algorithm.
-    #     - signature V4 : 'AWSS3V4SignerType' (default value)
-    #     - signature V2 : 'S3SignerType'
-    s3SignerType: AWSS3V4SignerType
-    # s3PathStyleAccessEnabled (optional):  'true' to access bucket in "path-style", else "virtual-hosted-style" (false by default in java client, true by default in ansible scripts) 
-    s3PathStyleAccessEnabled: true
-    # s3MaxConnections (optional): Max total connection (concurrent connections) (50 by default)
-    s3MaxConnections: 50
-    # s3ConnectionTimeout (optional): Max time (in milliseconds) for waiting to establish connection (10000 by default)
-    s3ConnectionTimeout: 10000
-    # s3SocketTimeout (optional): Max time (in milliseconds) for reading from a connected socket (50000 by default)
-    s3SocketTimeout: 50000
-    # s3RequestTimeout (optional): Max time (in milliseconds) for a request (0 by default, disabled)
-    s3RequestTimeout: 0
-    # s3ClientExecutionTimeout (optional): Max time (in milliseconds) for a request by java client (0 by default, disabled)
-    s3ClientExecutionTimeout: 0
-
-    #Time (in seconds) to renew a token before expiration occurs
-    swiftSoftRenewTokenDelayBeforeExpireTime: 300
-    offer_log_compaction:
-      ## Expiration, here offer logs 21 days old will be compacted
-      expiration_value: 21
-      ## Choose one of "MILLENNIA", "HALF_DAYS", "MILLIS", "FOREVER", "MICROS", "CENTURIES", "DECADES", "YEARS", "DAYS", "SECONDS", "HOURS", "MONTHS", "WEEKS", "NANOS", "MINUTES", "ERAS"
-      expiration_unit: "DAYS"
-      ## Compaction bulk size here 10 000 offers logs (at most) will be compacted (Expected value between 1 000 and 200 000)
-      compaction_size: 10000
-    # Batch processing thread pool size
-    maxBatchThreadPoolSize: 32
-    # Batch metadata computation timeout in seconds
-    batchMetadataComputationTimeout: 600
-
+################################################################################
   # example_swift_v1:
   #    provider: openstack-swift
   #    swiftKeystoneAuthUrl: https://keystone/auth/1.0
   #    swiftDomain: domain
   #    swiftUser: user
   #    swiftPassword: has to be set in vault-vitam.yml (encrypted) with same structure => DO NOT COMMENT OUT
+  # THIS PART IS ONLY FOR CLEANING (and mandatory for this use case)
+  #    swiftProjectId: related to OS_PROJECT_ID
+  #    swiftRegionName: related to OS_REGION_NAME
+  #    swiftInterface: related to OS_INTERFACE
   # example_swift_v3:
   #    provider: openstack-swift-v3
   #    swiftKeystoneAuthUrl: https://keystone/v3
@@ -217,11 +237,16 @@ vitam_offers:
   #    swiftPassword: has to be set in vault-vitam.yml (encrypted) with same structure => DO NOT COMMENT OUT
   #    swiftProjectName: monTenant
   #    projectName: monTenant
-  # swiftTrustStore: /chemin_vers_mon_fichier/monSwiftTrustStore.jks
-  # swiftMaxConnectionsPerRoute: 200
-  # swiftMaxConnections: 1000
-  # swiftConnectionTimeout: 200000
-  # swiftReadTimeout: 60000
-  # Time (in seconds) to renew a token before expiration occurs
-  # swiftHardRenewTokenDelayBeforeExpireTime: 60
-  # swiftSoftRenewTokenDelayBeforeExpireTime: 300
+  # THIS PART IS ONLY FOR CLEANING (and mandatory for this use case)
+  #    swiftProjectId: related to OS_PROJECT_ID
+  #    swiftRegionName: related to OS_REGION_NAME
+  #    swiftInterface: related to OS_INTERFACE
+  #
+  #    swiftTrustStore: /chemin_vers_mon_fichier/monSwiftTrustStore.jks
+  #    swiftMaxConnectionsPerRoute: 200
+  #    swiftMaxConnections: 1000
+  #    swiftConnectionTimeout: 200000
+  #    swiftReadTimeout: 60000
+  #    Time (in seconds) to renew a token before expiration occurs
+  #    swiftHardRenewTokenDelayBeforeExpireTime: 60
+  #    swiftSoftRenewTokenDelayBeforeExpireTime: 300
