--- a/deployment/environments/group_vars/all/extra_vars.yml
+++ b/deployment/environments/group_vars/all/extra_vars.yml
@@ -17,26 +17,6 @@ vitam:
         session_timeout: 1800000
         secure_cookie: true
         use_proxy_to_clone_tests: "yes"
-        metrics_enabled: true
-        logback_rolling_policy: true
-        logback_max_file_size: "10MB"
-        logback_total_size_cap:
-          file:
-            history_days: 30
-            totalsize: "5GB"
-          security:
-            history_days: 30
-            totalsize: "5GB"
-        jvm_log: false
-        performance_logger: "false"
-        reconstruction:
-        consul_check_business: 10 # value in seconds
-        consul_admin_check: 10 # value in seconds
-        # metricslevel: DEBUG
-        # metricsinterval: 3
-        # metricsunit: MINUTES
-        access_retention_days: 15 # Number of days for file retention
-        access_total_size_cap: "14GB" # total acceptable size
         elasticsearch_mapping_dir: "{{ vitam_defaults.folder.root_path }}/conf/ihm-recette/mapping"
     library:
         vitam_component: library
@@ -47,25 +27,8 @@ vitam:
         https_enabled: false
         secret_platform: "false"
         metrics_enabled: false
-        logback_rolling_policy: true
-        logback_max_file_size: "10MB"
-        logback_total_size_cap:
-          file:
-            history_days: 30
-            totalsize: "5GB"
-          security:
-            history_days: 30
-            totalsize: "5GB"
-        jvm_log: false
-        performance_logger: "false"
-        reconstruction:
-        consul_check_business: 30 # value in seconds
+        consul_business_check: 30 # value in seconds
         consul_admin_check: 30 # value in seconds
-        # metricslevel: DEBUG
-        # metricsinterval: 3
-        # metricsunit: MINUTES
-        access_retention_days: 15 # Number of days for file retention
-        access_total_size_cap: "14GB" # total acceptable size
 
 tenant_to_clean_before_tnr: ["0","1"]
 
